# genesis_engine_deprecated

Engine/: CMakeLists.txt  CMake_And_BuildAndroid.bat  StandloneBuildAndroid.bat
Engine/CMake/: AndroidBuildConfig.cmake  AndroidToolChain.cmake  Macros.cmake  Options.cmake  WindowsBuildConfig.cmake
Engine/CSharpAssembly/: RegisterMonoModules.cpp
Engine/ExtIncludes/: CMakeLists.txt  stdneb.h
Engine/GameApp/GameApp.xcodeproj/: project.pbxproj
Engine/GenesisEngineLib/GenesisEngineLib/: GenesisEngineLib-Prefix.pch
Engine/GenesisEngineLib/GenesisEngineLib.xcodeproj/: project.pbxproj
Engine/GenesisLoader/: GenesisLoader.cc  GenesisLoaderData.h
Engine/IOSObjectC/IOSFramework/: AppDelegate.h  AppDelegate.mm  OCAndCPlusInterface.mm  TextViewController.h  TextViewController.mm  ViewController.mm
Engine/IOSObjectC/OCAndCPlusPlusInterface/: OCAndCPlusInterface.h
Engine/IOSObjectC/iosALSystem/: ALStoreKit.h  ALStoreKit.mm  iOSSystem.h  iOSSystem.mm
Engine/Shell/: Genesis.cc  Genesis.h
Engine/addons/: CMakeLists.txt  stdneb.h
Engine/addons/ALSystem/: CMakeLists.txt
Engine/addons/animation/: Animation.cc  Animation.h  CMakeLists.txt  ClipControl.cc  ClipControl.h  animation_stdneb.h
Engine/addons/guibase/: CMakeLists.txt
Engine/addons/input/: CMakeLists.txt  input_stdneb.h  inputeventtypes.h  inputgamepad.cc  inputgamepad.h  inputkey.cc  inputkey.h  inputkeyboard.cc  inputkeyboard.h  inputmouse.cc  inputmouse.h  inputserver.cc  inputserver.h  inputsource.cc  inputsource.h  inputwindowsource.cc  inputwindowsource.h  mobileinputevent.h  mobilekeyboardevent.h
Engine/addons/materialmaker/: CMakeLists.txt  GenesisMakeGPUProgram.cc  GenesisMakeGPUProgram.h  GenesisMakeMaterial.cc  GenesisMakeMaterial.h  GenesisMakePass.cc  GenesisMakePass.h  GenesisMakeTechnique.cc  GenesisMakeTechnique.h  GenesisMaterial.cc  GenesisMaterial.h  stdneb.h
Engine/addons/myguiengine/: CMakeLists.txt
Engine/addons/myguiplatforms/: CMakeLists.txt
Engine/addons/particles/: CMakeLists.txt  particle_classregistry.cc  particle_fwd_decl.h  particleaffector.cc  particleaffector.h  particleaffectorserialization.cc  particleemitter.cc  particleemitter.h  particlesystem.cc  particlesystem.h  particlesystemserialization.cc  particletarget.cc  particletarget.h  particletechnique.cc
Engine/addons/posteffects/: CMakeLists.txt
Engine/addons/posteffects/OldTV/: PostEffectOldTVRenderer.cc  PostEffectOldTVRenderer.h
Engine/addons/posteffects/ShowerDoor/: PostEffectShowerDoorRenderer.cc  PostEffectShowerDoorRenderer.h
Engine/addons/posteffects/blur/: PostEffectBlurRenderer.cc  PostEffectBlurRenderer.h
Engine/addons/posteffects/goldenShine/: PostEffectGoldenShineRenderer.cc  PostEffectGoldenShineRenderer.h
Engine/addons/posteffects/simpleHDR/: PostEffectSimpleHDRRenderer.cc  PostEffectSimpleHDRRenderer.h
Engine/addons/posteffects/twirl/: PostEffectTwirlRenderer.cc  PostEffectTwirlRenderer.h
Engine/addons/resource/: CMakeLists.txt  animationresloader.cc  animationressaver.cc  imageoperations.cc  imageres.cc  imageresloader.cc  imageresloader.h  materialresloader.cc  materialressaver.cc  meshSpliter.cc  meshSpliter.h  meshres.h  meshresloader.cc  meshressaver.cc  physxmaterialloader.cc  physxmaterialloader.h  physxmaterialsaver.cc  resinfo.h  resource.cc  resource.h  resource_stdneb.h  resourcebase.h  resourcemanager.cc  resourcemanager.h  resourcepriority.cc  resourcepriority.h  resourceserver.cc  skeletonres.cc  spritepackageresloader.cc  spritepackageressaver.cc
Engine/addons/serialization/: CMakeLists.txt  serialize.cc  serializeserver.cc  xmserialize.cc
Engine/addons/shadercompiler/: CMakeLists.txt  ShaderCompiler.cc  ShaderCompiler.h  ShaderCompilerSetting.cc  ShaderCompilerSetting.h  ShaderData.cc  ShaderData.h  ShaderElement.cc  ShaderElement.h  ShaderFactory.cc  ShaderMarcro.cc  ShaderMarcro.h  ShadercompilerConfig.cc  (+2 more)
Engine/addons/sky/: Atmosphere.cc  Atmosphere.h  CMakeLists.txt  Clouds.cc  Clouds.h  ColorGradient.cc  ColorGradient.h  MeshManager.cc  MeshManager.h  Moon.cc  Moon.h  SkyBox.cc  SkyBox.h  SkyRender.cc  SkyRender.h  SkySphere.cc  SkySphere.h
Engine/app/: CMakeLists.txt  app_classregistry.cc  stdneb.h
Engine/depends/: CMakeLists.txt
Engine/foundation/: CMakeLists.txt  stdneb.h
Engine/graphicsystem/: CMakeLists.txt  GraphicObjectManager.cc  GraphicObjectManager.h  GraphicSystem.cc  GraphicSystem.h  RenderTargetSuite.cc  RenderTargetSuite.h  ViewPortWindow.cc  ViewPortWindow.h  stdneb.h
Engine/packagetool/: CMakeLists.txt  FileData.cc  FileFormat.h  Package.cc  Package.h  PackageSystem.cc  PackageSystem.h  PackageTool.cc  PackageTool.h  PackageUtil.h
Engine/players/Demo/: CMakeLists.txt  DemoPublish_GameApplication.cc  DemoPublish_GameApplication.h  DemoPublish_WinWebInterface.cc  Demo_GameApplication.cc  Demo_GameApplication.h  Demo_Main.cc  simplegamestatehandler.cc  simplegamestatehandler.h
Engine/players/Demo/Common/: DemoFwdDecl.h  DemoGameStateHandler.cc  DemoGameStateHandler.h  GameBuilding.cc  GameBuilding.h  GameData.cc  GameData.h  GameLogic.cc  GameLogic.h  GameUtil.cc  GameUtil.h  InputSystem.cc  InputSystem.h  Model.cc  Model.h  PageExportFunction.cc  PageExportFunction.h
Engine/players/DemoUI/: CMakeLists.txt  gyrostat.cc  gyrostat.h  inputprocss.cc  inputprocss.h  simplegame.cc  simplegameapplication.cc  simplegameapplication.h  simplegamestatehandler.cc  simplegamestatehandler.h
Engine/players/Genesis/: CMakeLists.txt  DemoMat_WinWebInterface.cc  simplegameapplication.h
Engine/players/GenesisA/: AndroidJNILoader.cc  CMakeLists.txt  simplegameapplication.cc  simplegameapplication.h
Engine/players/PhysX_Sample/: CMakeLists.txt  simplegame.cpp  simplegameapplication.cpp  simplegameapplication.h  simplegamestatehandler.cpp  simplegamestatehandler.h
Engine/profilesystem/: CMakeLists.txt  IoStats.cc  IoStats.h  ProfileSystem.h
Engine/rendersystem/: CMakeLists.txt  RenderMessageProtocol.h  RenderMessageProtocol.nidl  RenderSystem.cc  RenderSystem.h  RenderSystemMessageHandler.cc  stdneb.h
Engine/script/: ScriptLibrary.sln
(+661 files in other folders)
